vpc-setup.yaml
AWSTemplateFormatVersion: "2010-09-09"
Metadata:
    Generator: "former2"
Description: ""
Resources:
    #VPC
    EC2VPC:
        Type: "AWS::EC2::VPC"
        Properties:
            CidrBlock: "10.0.0.0/16"
            EnableDnsSupport: true
            EnableDnsHostnames: false
            InstanceTenancy: "default"
            Tags: 
              - 
                Key: "CreatedBy"
                Value: "Kaushik"
              - 
                Key: "Name"
                Value: "test-vpc"

    #Subnets
    EC2PrivateSubnet2:
        Type: "AWS::EC2::Subnet"
        Properties:
            AvailabilityZone: !Sub "${AWS::Region}a"
            CidrBlock: "10.0.0.0/24"
            VpcId: !Ref EC2VPC
            MapPublicIpOnLaunch: false
            Tags: 
              - 
                Key: "CreatedBy"
                Value: "Kaushik"
              - 
                Key: "Name"
                Value: "test-private-subnet-2"
                
    EC2PrivateSubnet1:
        Type: "AWS::EC2::Subnet"
        Properties:
            AvailabilityZone: !GetAtt EC2PrivateSubnet2.AvailabilityZone
            CidrBlock: "10.0.3.0/24"
            VpcId: !Ref EC2VPC
            MapPublicIpOnLaunch: false
            Tags: 
              - 
                Key: "CreatedBy"
                Value: "Kaushik"
              - 
                Key: "Name"
                Value: "test-private-subnet-1"

    EC2PublicSubnet1:
        Type: "AWS::EC2::Subnet"
        Properties:
            AvailabilityZone: !GetAtt EC2PrivateSubnet2.AvailabilityZone
            CidrBlock: "10.0.1.0/24"
            VpcId: !Ref EC2VPC
            MapPublicIpOnLaunch: false
            Tags: 
              - 
                Key: "CreatedBy"
                Value: "Kaushik"
              - 
                Key: "Name"
                Value: "test-public-subnet-1"

    EC2PublicSubnet2:
        Type: "AWS::EC2::Subnet"
        Properties:
            AvailabilityZone: !GetAtt EC2PrivateSubnet2.AvailabilityZone
            CidrBlock: "10.0.2.0/24"
            VpcId: !Ref EC2VPC
            MapPublicIpOnLaunch: false
            Tags: 
              - 
                Key: "CreatedBy"
                Value: "Kaushik"
              - 
                Key: "Name"
                Value: "test-public-subnet-2"

    #Internet Gateway
    EC2InternetGateway:
        Type: "AWS::EC2::InternetGateway"
        Properties:
            Tags: 
              - 
                Key: "CreatedBy"
                Value: "Kaushik"
              - 
                Key: "Name"
                Value: "test-internet-gateway"
    
    #Elastic IP
    EC2EIP:
        Type: "AWS::EC2::EIP"
        Properties:
            Domain: "vpc"
            Tags: 
              - 
                Key: "CreatedBy"
                Value: "Kaushik"
              - 
                Key: "Name"
                Value: "test-elastic-ip"
    
    #Internet Gateway Attachment
    EC2InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref EC2InternetGateway
            VpcId: !Ref EC2VPC
                
    #NAT Gateway
    EC2NatGateway:
        Type: "AWS::EC2::NatGateway"
        Properties:
            SubnetId: !Ref EC2PublicSubnet1
            Tags: 
              - 
                Key: "CreatedBy"
                Value: "Kaushik"
              - 
                Key: "Name"
                Value: "test-nat-gateway"
            AllocationId: !GetAtt EC2EIP.AllocationId

    #Route Tables
    EC2RouteTablePublic:
        Type: "AWS::EC2::RouteTable"
        Properties:
            VpcId: !Ref EC2VPC
            Tags: 
              - 
                Key: "CreatedBy"
                Value: "Kaushik"
              - 
                Key: "Name"
                Value: "test-public-route-table"

    EC2RouteTablePrivate:
        Type: "AWS::EC2::RouteTable"
        Properties:
            VpcId: !Ref EC2VPC
            Tags: 
              - 
                Key: "Name"
                Value: "test-private-route-table"
              - 
                Key: "CreatedBy"
                Value: "Kaushik"

    #Routes
    EC2RoutePublic:
        Type: "AWS::EC2::Route"
        Properties:
            DestinationCidrBlock: "0.0.0.0/0"
            GatewayId: !Ref EC2InternetGateway
            RouteTableId: !Ref EC2RouteTablePublic

    EC2RoutePrivate:
        Type: "AWS::EC2::Route"
        Properties:
            DestinationCidrBlock: "0.0.0.0/0"
            NatGatewayId: !Ref EC2NatGateway
            RouteTableId: !Ref EC2RouteTablePrivate

    #Route Table to Subnet Associations
    EC2SubnetRouteTableAssociation:
        Type: "AWS::EC2::SubnetRouteTableAssociation"
        Properties:
            RouteTableId: !Ref EC2RouteTablePublic
            SubnetId: !Ref EC2PublicSubnet2

    EC2SubnetRouteTableAssociation2:
        Type: "AWS::EC2::SubnetRouteTableAssociation"
        Properties:
            RouteTableId: !Ref EC2RouteTablePublic
            SubnetId: !Ref EC2PublicSubnet1

    EC2SubnetRouteTableAssociation3:
        Type: "AWS::EC2::SubnetRouteTableAssociation"
        Properties:
            RouteTableId: !Ref EC2RouteTablePrivate
            SubnetId: !Ref EC2PrivateSubnet1

    EC2SubnetRouteTableAssociation4:
        Type: "AWS::EC2::SubnetRouteTableAssociation"
        Properties:
            RouteTableId: !Ref EC2RouteTablePrivate
            SubnetId: !Ref EC2PrivateSubnet2
